#56 Chart design top overflow fix.

--- a/client/styles/imports/morris.less
+++ b/client/styles/imports/morris.less
@@ -2,8 +2,20 @@
   border: 4px solid #cfdbe2!important;
   padding: 15px!important;
   border-radius: 3px!important;
-  
+
   .morris-hover-point {
     color: #cfdbe2!important;
+  }
+}
+
+#morris-cpu {
+  > svg {
+    overflow: overlay!important;
+  }
+}
+
+#morris-memory {
+  > svg {
+    overflow: overlay!important;
   }
 }
